--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ matrix:
     env: ""
   - elixir: 1.5.3
     otp_release: 18.3
+    env: WALLABY_DRIVER=phantom
+  - elixir: 1.5.3
+    otp_release: 18.3
     env: WALLABY_DRIVER=chrome
   - elixir: 1.5.3
     otp_release: 18.3
@@ -15,6 +18,9 @@ matrix:
     env: ""
   - elixir: 1.6.6
     otp_release: 19.3
+    env: WALLABY_DRIVER=phantom
+  - elixir: 1.6.6
+    otp_release: 19.3
     env: WALLABY_DRIVER=chrome
   - elixir: 1.6.6
     otp_release: 19.3
@@ -24,6 +30,9 @@ matrix:
     env: ""
   - elixir: 1.7.4
     otp_release: 20.3
+    env: WALLABY_DRIVER=phantom
+  - elixir: 1.7.4
+    otp_release: 20.3
     env: WALLABY_DRIVER=chrome
   - elixir: 1.7.4
     otp_release: 20.3
@@ -33,6 +42,9 @@ matrix:
     env: ""
   - elixir: 1.8.2
     otp_release: 21.3
+    env: WALLABY_DRIVER=phantom
+  - elixir: 1.8.2
+    otp_release: 21.3
     env: WALLABY_DRIVER=chrome
   - elixir: 1.8.2
     otp_release: 21.3
@@ -40,6 +52,9 @@ matrix:
   - elixir: 1.9.1
     otp_release: 22.0.7
     env: ""
+  - elixir: 1.9.1
+    otp_release: 22.0.7
+    env: WALLABY_DRIVER=phantom
   - elixir: 1.9.1
     otp_release: 22.0.7
     env: WALLABY_DRIVER=chrome
@@ -81,3 +96,10 @@ script:
 after_script:
   - mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
+
+before_install:
+  - "export PATH=$PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64/bin:$PATH"
+  - "if [ $(phantomjs --version) != '2.1.1' ]; then rm -rf $PWD/travis_phantomjs; mkdir -p $PWD/travis_phantomjs; fi"
+  - "if [ $(phantomjs --version) != '2.1.1' ]; then wget https://assets.membergetmember.co/software/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2; fi"
+  - "if [ $(phantomjs --version) != '2.1.1' ]; then tar -xvf $PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis_phantomjs; fi"
+  - "phantomjs --version"
